--- a/package.json
+++ b/package.json
@@ -10,7 +10,17 @@
   "author": "Kir-Dev",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.12.0",
+    "cookie-parser": "^1.3.4",
+    "express": "^4.12.0",
+    "express-session": "^1.10.3",
     "irc": "^0.3.9",
-    "mongoose": "^3.8.24"
+    "mongoose": "^3.8.24",
+    "morgan": "^1.5.1",
+    "passport": "^0.2.1",
+    "passport-oauth": "^1.0.0",
+    "path": "^0.11.14",
+    "request": "^2.53.0",
+    "serve-favicon": "^2.2.0"
   }
 }
