--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongoose": "^3.8.24",
     "morgan": "^1.5.1",
     "passport": "^0.2.1",
+    "passport-local": "^1.0.0",
     "passport-oauth": "^1.0.0",
     "path": "^0.11.14",
     "request": "^2.53.0",
