--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "body-parser": "^1.12.0",
     "cookie-parser": "^1.3.4",
+    "ejs": "^2.3.1",
     "express": "^4.12.0",
     "express-session": "^1.10.3",
     "irc": "^0.3.9",
