--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ejs": "^2.3.1",
     "express": "^4.12.0",
     "express-session": "^1.10.3",
+    "express3-handlebars": "^0.5.2",
     "irc": "^0.3.9",
     "mongoose": "^3.8.24",
     "morgan": "^1.5.1",
