--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cookie-parser": "^1.3.4",
     "ejs": "^2.3.1",
     "express": "^4.12.0",
+    "express-handlebars": "^1.2.1",
     "express-session": "^1.10.3",
     "express3-handlebars": "^0.5.2",
     "irc": "^0.3.9",
