--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Kir-Dev",
   "license": "ISC",
   "dependencies": {
+    "async": "^0.9.0",
     "body-parser": "^1.12.0",
     "cookie-parser": "^1.3.4",
     "ejs": "^2.3.1",
